# LoxInterpreter

./: CMakeLists.txt
include/: TokenTypes.h  scanner.h  token.h  tokentypes.h
src/: CmakeLists.txt  scanner.cpp  token.cpp
tests/: CMakeLists.txt
